fix overflow bug on line numbers

--- a/src/features/constraintMenu/constraintMenu.css
+++ b/src/features/constraintMenu/constraintMenu.css
@@ -52,6 +52,10 @@ div.constraint-menu {
     overflow: visible;
 }
 
+#constraint-menu-input .overflow-guard {
+    overflow: hidden;
+}
+
 #validation-label {
     height: 1rem;
     color: var(--color-error);
